MAD9013 Final - Bootstrap Sports Site

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,3 +1,15 @@
 /********************************************
             MIXINS & EXTENSIONS
 ********************************************/
+
+//---------------------------------------------
+//              VENDOR PREFIX MIXIN
+//---------------------------------------------
+
+@mixin vendorPref($property, $value) {
+	-webkit-#{$property}: $value;
+	-moz-#{$property}: $value;
+	-ms-#{$property}: $value;
+	-o-#{$property}: $value;
+	#{$property}: $value;
+}
