--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,10 +3,9 @@
 ********************************************/
 
 /* Fonts */
-$font-primary-a     :   port-lligat-slab, serif;
-$font-primary-b     :   port-lligat-sans, sans-serif;
-$font-secondary     :   prosto-one, sans-serif;
-$font-tertiary      :   quattrocento-sans, sans-serif;
+$font-primary       :   questrial, sans-serif;
+$font-secondary     :   prosto-one, serif;
+$font-tertiary      :   quantico, sans-serif;
 $base-font-size     :   1rem;
 $base-line-height   :   1.3;
 
