--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,6 +21,7 @@ Stylesheet: Main Stylesheet
 body {
     font-family: $font-primary;
     background-image:url(../img/slide-2.jpg);
+    background-size: cover;
 }
 
 h1,
@@ -56,6 +57,31 @@ hr {
     display: none;
 }
 
+.header-nonbs {
+    height: 412px;
+    opacity: 0.8;
+}
+
+.home {
+    background: url(../img/slide-1.jpg) no-repeat 50% 45%;
+    background-size: cover;
+}
+
+.standings {
+    background: url(../img/slide-2.jpg) no-repeat 50% 51%;
+    background-size: cover;
+}
+
+.locations {
+    background: url(../img/slide-3.jpg) no-repeat 50% 22%;
+    background-size: cover;
+}
+
+.signup {
+    background: url(../img/slide-4.jpg) no-repeat 50% 55%;
+    background-size: cover;
+}
+
 .navbar-brand {
     text-transform: uppercase;
     font-weight: 900;
@@ -84,6 +110,10 @@ hr {
 
 .img-full {
     min-width: 100%;
+}
+
+img {
+    opacity: 0.7;
 }
 
 .brand-before,
@@ -147,6 +177,16 @@ footer p {
     padding: 50px 0;
 }
 
+@media screen and (max-width:768px) {
+    .header-nonbs { 
+        display: none;   
+    }
+    
+    .brand-name {
+        font-size: 3rem;
+    }
+}
+
 @media screen and (min-width:768px) {
     .brand {
         display: inherit;
@@ -160,7 +200,7 @@ footer p {
         line-height: normal;
         color: #fff;
     }
-
+    
     .top-divider {
         margin-top: 0;
     }
