--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,7 +20,7 @@ Stylesheet: Main Stylesheet
 
 body {
     font-family: $font-primary;
-    background-image:url(../img/slide-2.jpg);
+    background: rgba(172, 173, 171, 0.5);
     background-size: cover;
 }
 
@@ -73,13 +73,14 @@ hr {
 }
 
 .locations {
-    background: url(../img/slide-3.jpg) no-repeat 50% 22%;
+    background: url(../img/slide-4.jpg) no-repeat 50% 55%;
     background-size: cover;
 }
 
 .signup {
-    background: url(../img/slide-4.jpg) no-repeat 50% 55%;
+    background: url(../img/slide-3.jpg) no-repeat 50% 22%;
     background-size: cover;
+    opacity: 0.7;
 }
 
 .navbar-brand {
