--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,6 +23,9 @@ body {
     background: rgba(172, 173, 171, 0.5);
     background-size: cover;
 }
+div {
+    //border: 1px solid gray;
+}
 
 h1,
 h2,
