--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,8 +4,8 @@
 
 /* Fonts */
 $font-primary       :   questrial, sans-serif;
-$font-secondary     :   prosto-one, serif;
-$font-tertiary      :   quantico, sans-serif;
+$font-secondary     :   quantico, sans-serif;
+$font-tertiary      :   prosto-one, serif;
 $base-font-size     :   1rem;
 $base-line-height   :   1.3;
 
