--- a/css/main.css
+++ b/css/main.css
@@ -408,7 +408,7 @@ hr {
 
 .header-nonbs {
   height: 412px;
-  opacity: 0.8; }
+  display: none; }
 
 .navbar-brand {
   text-transform: uppercase;
@@ -439,7 +439,7 @@ img {
 
 .brand-before,
 .brand-name {
-  text-transform: capitalize; }
+  text-transform: uppercase; }
 
 .brand-before {
   margin: 15px 0; }
@@ -454,17 +454,6 @@ img {
   padding: 30px 15px;
   background: #fff;
   background: rgba(255, 255, 255, 0.9); }
-
-.intro-text {
-  font-family: quantico, sans-serif;
-  text-transform: uppercase;
-  font-size: 1.25em;
-  font-weight: 400;
-  letter-spacing: 1px; }
-
-.table, th, .tert {
-  font-family: quantico, sans-serif;
-  text-align: center; }
 
 .img-border {
   float: none;
@@ -483,12 +472,6 @@ footer p {
   margin: 0;
   padding: 50px 0; }
 
-@media screen and (max-width: 768px) {
-  .header-nonbs {
-    display: none; }
-
-  .brand-name {
-    font-size: 3rem; } }
 @media screen and (min-width: 768px) {
   .brand {
     display: inherit;
