--- a/scss/main.scss
+++ b/scss/main.scss
@@ -63,7 +63,7 @@ hr {
 
 .header-nonbs {
     height: 412px;
-    opacity: 0.8;
+    display: none;
 }
 
 .navbar-brand {
@@ -102,7 +102,7 @@ img {
 
 .brand-before,
 .brand-name {
-    text-transform: capitalize;
+    text-transform: uppercase;
 }
 
 .brand-before {
@@ -122,18 +122,18 @@ img {
     background: rgba(255,255,255,0.9);
 }
 
-.intro-text {
-    font-family: $font-secondary;
-    text-transform: uppercase;
-    font-size: 1.25em;
-    font-weight: 400;
-    letter-spacing: 1px;
-}
+//.intro-text {
+//    font-family: $font-secondary;
+//    text-transform: uppercase;
+//    font-size: 1.25em;
+//    font-weight: 400;
+//    letter-spacing: 1px;
+//}
 
-.table, th, .tert {
-    font-family: $font-secondary;
-    text-align: center;
-}
+//.table, th, .tert {
+//    font-family: $font-secondary;
+//    text-align: center;
+//}
 
 .img-border {
     float: none;
@@ -154,16 +154,6 @@ footer {
 footer p {
     margin: 0;
     padding: 50px 0;
-}
-
-@media screen and (max-width:768px) {
-    .header-nonbs { 
-        display: none;   
-    }
-    
-    .brand-name {
-        font-size: 3rem;
-    }
 }
 
 @media screen and (min-width:768px) {
