--- a/scss/main.scss
+++ b/scss/main.scss
@@ -61,11 +61,6 @@ hr {
     display: none;
 }
 
-.header-nonbs {
-    height: 412px;
-    display: none;
-}
-
 .navbar-brand {
     text-transform: uppercase;
     font-weight: 900;
@@ -156,7 +151,15 @@ footer p {
     padding: 50px 0;
 }
 
-@media screen and (min-width:768px) {
+@media screen and (max-width: 768px) {
+    
+    .header-nonbs {
+        height: 400px;
+        display: none;
+    }
+}
+
+@media screen and (min-width: 768px) {
     .brand {
         display: inherit;
         margin: 0;
