MAD9013 Final - Bootstrap Sports Site

--- a/css/main.css
+++ b/css/main.css
@@ -406,6 +406,9 @@ hr {
 .address-bar {
   display: none; }
 
+.header-nonbs {
+  height: 400px; }
+
 .navbar-brand {
   text-transform: uppercase;
   font-weight: 900;
@@ -481,7 +484,6 @@ footer p {
 
 @media screen and (max-width: 768px) {
   .header-nonbs {
-    height: 412px;
     display: none; } }
 @media screen and (min-width: 768px) {
   .brand {
