--- a/scss/main.scss
+++ b/scss/main.scss
@@ -61,6 +61,10 @@ hr {
     display: none;
 }
 
+.header-nonbs {
+    height: 400px;
+}
+
 .navbar-brand {
     text-transform: uppercase;
     font-weight: 900;
@@ -154,7 +158,6 @@ footer p {
 @media screen and (max-width: 768px) {
     
     .header-nonbs {
-        height: 412px;
         display: none;
     }
 }
