MAD9013 Final - Bootstrap Sports Site

--- a/css/main.css
+++ b/css/main.css
@@ -461,7 +461,7 @@ img {
   font-weight: 400;
   letter-spacing: 1px; }
 
-.table, th, .tert {
+.tert {
   font-family: quantico, sans-serif;
   text-align: center; }
 
