--- a/scss/main.scss
+++ b/scss/main.scss
@@ -129,7 +129,7 @@ img {
     letter-spacing: 1px;
 }
 
-.table, th, .tert {
+.tert {
     font-family: $font-secondary;
     text-align: center;
 }
