--- a/scss/main.scss
+++ b/scss/main.scss
@@ -129,9 +129,8 @@ img {
     letter-spacing: 1px;
 }
 
-.tert {
+.table, th, .tert {
     font-family: $font-secondary;
-    text-align: center;
 }
 
 .img-border {
