--- a/css/main.css
+++ b/css/main.css
@@ -371,21 +371,31 @@ th {
             MIXINS & EXTENSIONS
 ********************************************/
 /********************************************
-            BASELINE TEXT & BCKG STYLES
+            DEBUGGING LAYOUT
+********************************************/
+/********************************************
+            FONT FAMILIIES
 ********************************************/
 body {
-  font-family: questrial, sans-serif;
+  font-family: questrial, sans-serif; }
+
+.navbar-brand,
+.navbar-default .navbar-nav > li > a,
+.table,
+footer p {
+  font-family: quantico, sans-serif; }
+
+h1, h2, h3,
+h4, h5, h6 {
+  font-family: quantico, sans-serif; }
+
+body {
   background: rgba(172, 173, 171, 0.5);
   background-size: cover; }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3,
+h4, h5, h6 {
   text-transform: uppercase;
-  font-family: quantico, sans-serif;
   font-weight: 700;
   letter-spacing: 1px;
   color: rgba(172, 173, 171, 0.7); }
@@ -394,9 +404,6 @@ p {
   font-size: 1.25em;
   line-height: 1.6;
   color: #000; }
-
-footer p {
-  font-family: quantico, sans-serif; }
 
 hr {
   max-width: 400px;
@@ -421,9 +428,6 @@ hr {
 
 .navbar-nav li:hover {
   background: rgba(172, 173, 171, 0.5); }
-
-.navbar-default .navbar-nav > li > a {
-  font-family: quantico, sans-serif; }
 
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
@@ -455,15 +459,10 @@ img {
   background: rgba(255, 255, 255, 0.9); }
 
 .intro-text {
-  font-family: quantico, sans-serif;
   text-transform: uppercase;
   font-size: 1.25em;
   font-weight: 400;
   letter-spacing: 1px; }
-
-.table, th, .tert {
-  font-family: quantico, sans-serif;
-  text-align: center; }
 
 .img-border {
   float: none;
@@ -482,9 +481,6 @@ footer p {
   margin: 0;
   padding: 50px 0; }
 
-@media screen and (max-width: 768px) {
-  .header-nonbs {
-    display: none; } }
 @media screen and (min-width: 768px) {
   .brand {
     display: inherit;
