--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -3,6 +3,18 @@
 ********************************************/
 
 //---------------------------------------------
+//              ALL H TAGS MIXIN
+//---------------------------------------------
+
+
+@mixin headings {
+    h1, h2, h3,
+    h4, h5, h6 {
+        @content;
+    }
+}
+
+//---------------------------------------------
 //              VENDOR PREFIX MIXIN
 //---------------------------------------------
 
