--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -18,7 +18,7 @@
 //              VENDOR PREFIX MIXIN
 //---------------------------------------------
 
-@mixin vendorPref($property, $value) {
+@mixin vendorize($property, $value) {
 	-webkit-#{$property}: $value;
 	-moz-#{$property}: $value;
 	-ms-#{$property}: $value;
