--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,7 +30,7 @@ body {
     font-family: $font-primary;
 }
 
-.navbar-brand,
+.navbar-league,
 .navbar-default .navbar-nav>li>a,
 .table,
 footer p {
@@ -42,14 +42,14 @@ footer p {
 }
 
 @media screen and (min-width: 768px) {
-    .brand { font-family: $font-tertiary; }
+    .league { font-family: $font-tertiary; }
 }
 
         /********************************************
                 FONT SIZES, COLORS & WEIGHTS
         ********************************************/
 
-.navbar-brand {
+.navbar-league {
     font-weight: 900;
     letter-spacing: 2px;
 }
@@ -81,11 +81,13 @@ p {
     text-transform: uppercase;
 }
 
-.navbar-brand,
 .navbar-nav,
-.brand-before,
-.brand-name {
+.league-name {
     text-transform: uppercase;
+}
+
+.league-before {
+    text-transform: capitalize;
 }
 
         /********************************************
@@ -128,7 +130,7 @@ img {
     opacity: 0.7;
 }
 
-.brand-before {
+.league-before {
     margin: 15px 0;
 }
 
@@ -167,7 +169,7 @@ footer p {
 }
 
 @media screen and (min-width: 768px) {
-    .brand {
+    .league {
         display: inherit;
         margin: 0;
         padding: 30px 0 10px;
