--- a/css/main.css
+++ b/css/main.css
@@ -366,7 +366,7 @@ th {
                 VARIABLES
 ********************************************/
 /* Fonts */
-/* Colors */
+/* Colours */
 /********************************************
             MIXINS & EXTENSIONS
 ********************************************/
@@ -393,11 +393,26 @@ h4, h5, h6 {
   .league {
     font-family: prosto-one, serif; } }
 /********************************************
-        FONT SIZES, COLORS & WEIGHTS
+        FONT SIZES, WEIGHTS & COLORS
 ********************************************/
+p {
+  font-size: 1.25em;
+  line-height: 1.6; }
+
 .navbar-league {
   font-weight: 900;
-  letter-spacing: 2px; }
+  letter-spacing: 2px;
+  color: #777;
+  float: left;
+  height: 50px;
+  padding: 15px 15px;
+  font-size: 18px;
+  line-height: 20px; }
+
+.navbar-league:hover {
+  text-decoration: none;
+  color: #acadab;
+  opacity: 1; }
 
 .navbar-nav {
   font-weight: 400;
@@ -408,11 +423,6 @@ h4, h5, h6 {
   font-weight: 700;
   letter-spacing: 1px;
   color: rgba(172, 173, 171, 0.7); }
-
-p {
-  font-size: 1.25em;
-  line-height: 1.6;
-  color: #000; }
 
 /********************************************
                 TEXT TRANSFORMS
@@ -432,8 +442,7 @@ h4, h5, h6 {
                 BACKGROUNDS
 ********************************************/
 body {
-  background: rgba(172, 173, 171, 0.5);
-  background-size: cover; }
+  background: rgba(172, 173, 171, 0.5); }
 
 hr {
   max-width: 400px;
