--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,10 +9,8 @@ $font-tertiary      :   prosto-one, serif;
 $base-font-size     :   1rem;
 $base-line-height   :   1.3;
 
-/* Colors */
-$color-light-a  :   #ffffff;
-$color-light-b  :   #6c88ff;
-$color-medium-a :   #627ae6;
-$color-medium-b :   #5166bf;
-$color-dark-a   :   #364480;
-$color-dark-b   :   #1b2240;
+/* Colours */
+$color-white    :   #fff;
+$color-normal   :   rgb(172, 173, 171);
+$color-light    :   rgba(172, 173, 171, 0.7);
+$color-lighter  :   rgba(172, 173, 171, 0.5);
