--- a/css/main.css
+++ b/css/main.css
@@ -425,23 +425,19 @@ h4, h5, h6 {
   color: rgba(172, 173, 171, 0.7); }
 
 /********************************************
-                TEXT TRANSFORMS
+                TEXT TRANSFORM
 ********************************************/
 h1, h2, h3,
 h4, h5, h6 {
   text-transform: uppercase; }
 
-.navbar-nav,
-.league-name {
-  text-transform: uppercase; }
-
-.league-before {
-  text-transform: capitalize; }
-
 /********************************************
                 BACKGROUNDS
 ********************************************/
 body {
+  background: rgba(172, 173, 171, 0.5); }
+
+.navbar-nav li:hover {
   background: rgba(172, 173, 171, 0.5); }
 
 hr {
@@ -451,18 +447,14 @@ hr {
 .header-nonbs {
   height: 400px; }
 
-.navbar-nav li:hover {
-  background: rgba(172, 173, 171, 0.5); }
-
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
   color: #fff;
   background-color: transparent; }
 
-.img-full {
-  min-width: 100%; }
-
 img {
+  height: 100%;
+  width: 100%;
   opacity: 0.7; }
 
 .league-before {
