--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -11,6 +11,8 @@ $base-line-height   :   1.3;
 
 /* Colours */
 $color-white    :   #fff;
+$color-gray-a   :   #999;
+$color-gray-b   :   #777;
 $color-normal   :   rgb(172, 173, 171);
 $color-light    :   rgba(172, 173, 171, 0.7);
 $color-lighter  :   rgba(172, 173, 171, 0.5);
