--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 /******************************************************************
-        Site Name: Bootstrap Sports Site
-        Author: Vladimir Tonkonogov
+Site Name: Bootstrap Sports Site
+Author: Vladimir Tonkonogov
 
-        Stylesheet: Main Stylesheet
+Stylesheet: Main Stylesheet
 ******************************************************************/
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 /**
@@ -363,21 +363,13 @@ th {
   padding: 0; }
 
 /********************************************
-                VARIABLES
-********************************************/
-/* Fonts */
-/* Colours */
-/********************************************
-            MIXINS & EXTENSIONS
-********************************************/
-/********************************************
                 DEBUGGING LAYOUT
 ********************************************/
 /********************************************
                 FONT FAMILIES
 ********************************************/
 body {
-  font-family: questrial, sans-serif; }
+  font-family: questrial, helvetica, arial, sans-serif; }
 
 .navbar-league,
 .navbar-default .navbar-nav > li > a,
@@ -440,6 +432,70 @@ body {
 .navbar-nav li:hover {
   background: rgba(172, 173, 171, 0.5); }
 
+/********************************************
+                BACKGROUND IMAGES
+********************************************/
+.home, .standings,
+.locations, .signup {
+  opacity: 0.8;
+  filter: alpha(opacity=80);
+  -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=80"; }
+
+@media screen and (min-width: 768px) {
+  .home {
+    background: url(../img/slide-1_1536.jpg) 50% 45% / cover no-repeat; } }
+@media screen and (min-width: 992px) {
+  .home {
+    background: url(../img/slide-1_1536.jpg) 50% 45% / cover no-repeat; } }
+@media screen and (min-width: 1200px) {
+  .home {
+    background: url(../img/slide-1_1536.jpg) 50% 45% / cover no-repeat; } }
+@media screen and (min-width: 1441px) {
+  .home {
+    background: url(../img/slide-1_1536.jpg) 50% 45% / cover no-repeat; } }
+
+@media screen and (min-width: 768px) {
+  .standings {
+    background: url(../img/slide-2_1536.jpg) 50% 51% / cover no-repeat; } }
+@media screen and (min-width: 992px) {
+  .standings {
+    background: url(../img/slide-2_1536.jpg) 50% 51% / cover no-repeat; } }
+@media screen and (min-width: 1200px) {
+  .standings {
+    background: url(../img/slide-2_1536.jpg) 50% 51% / cover no-repeat; } }
+@media screen and (min-width: 1441px) {
+  .standings {
+    background: url(../img/slide-2_1536.jpg) 50% 51% / cover no-repeat; } }
+
+@media screen and (min-width: 768px) {
+  .locations {
+    background: url(../img/slide-3_1536.jpg) 50% 35% / cover no-repeat; } }
+@media screen and (min-width: 992px) {
+  .locations {
+    background: url(../img/slide-3_1536.jpg) 50% 35% / cover no-repeat; } }
+@media screen and (min-width: 1200px) {
+  .locations {
+    background: url(../img/slide-3_1536.jpg) 50% 35% / cover no-repeat; } }
+@media screen and (min-width: 1441px) {
+  .locations {
+    background: url(../img/slide-3_1536.jpg) 50% 35% / cover no-repeat; } }
+
+@media screen and (min-width: 768px) {
+  .signup {
+    background: url(../img/slide-4_1536.jpg) 50% 22% / cover no-repeat; } }
+@media screen and (min-width: 992px) {
+  .signup {
+    background: url(../img/slide-4_1536.jpg) 50% 22% / cover no-repeat; } }
+@media screen and (min-width: 1200px) {
+  .signup {
+    background: url(../img/slide-4_1536.jpg) 50% 22% / cover no-repeat; } }
+@media screen and (min-width: 1441px) {
+  .signup {
+    background: url(../img/slide-4_1536.jpg) 50% 22% / cover no-repeat; } }
+
+/********************************************
+                REST of STYLES
+********************************************/
 hr {
   max-width: 400px;
   border-color: #999999; }
@@ -518,26 +574,6 @@ footer p {
     font-weight: 400;
     letter-spacing: 3px;
     color: #fff; }
-
-  .home {
-    background: url(../img/slide-1.jpg) no-repeat 50% 45%;
-    background-size: cover;
-    opacity: 0.8; }
-
-  .standings {
-    background: url(../img/slide-2.jpg) no-repeat 50% 51%;
-    background-size: cover;
-    opacity: 0.8; }
-
-  .locations {
-    background: url(../img/slide-3.jpg) no-repeat 50% 35%;
-    background-size: cover;
-    opacity: 0.8; }
-
-  .signup {
-    background: url(../img/slide-4.jpg) no-repeat 50% 22%;
-    background-size: cover;
-    opacity: 0.8; }
 
   .navbar {
     border-radius: 0; }
