--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,18 +1,40 @@
-/********************************************
-                VARIABLES
-********************************************/
+//---------------------------------------------
+//              VARIABLES
+//---------------------------------------------
 
-/* Fonts */
-$font-primary       :   questrial, sans-serif;
+//  Fonts
+$font-primary       :   questrial, helvetica, arial, sans-serif;
 $font-secondary     :   quantico, sans-serif;
 $font-tertiary      :   prosto-one, serif;
 $base-font-size     :   1rem;
 $base-line-height   :   1.3;
 
-/* Colours */
+//  Colours
 $color-white    :   #fff;
 $color-gray-a   :   #999;
 $color-gray-b   :   #777;
 $color-normal   :   rgb(172, 173, 171);
 $color-light    :   rgba(172, 173, 171, 0.7);
 $color-lighter  :   rgba(172, 173, 171, 0.5);
+
+//  Bootstrap Breakpoints
+$cstm-max   :     "screen and (max-width : 319px)";
+$xs-max     :     "screen and (max-width : 479px)";
+$sm-max     :     "screen and (max-width : 767px)";
+$md-max     :     "screen and (max-width : 991px)";
+$lg-max     :     "screen and (max-width : 1199px)";
+
+$cstm-min   :     "screen and (min-width : 320px)";
+$xs-min     :     "screen and (min-width : 480px)";
+$sm-min     :     "screen and (min-width : 768px)";
+$md-min     :     "screen and (min-width : 992px)";
+$lg-min     :     "screen and (min-width : 1200px)";
+
+//  Additional Breakpoints
+$xl-min     :     "screen and (min-width : 1441px)";
+
+//  Media Query Variables for Background Url
+$home       :   "50% 45% / cover no-repeat";
+$standings  :   "50% 51% / cover no-repeat";
+$locations   :   "50% 35% / cover no-repeat";
+$signup     :   "50% 22% / cover no-repeat";
