--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,9 +3,9 @@
 //---------------------------------------------
 
 //  Fonts
-$font-primary       :   questrial, helvetica, arial, sans-serif;
-$font-secondary     :   quantico, sans-serif;
-$font-tertiary      :   prosto-one, serif;
+$font-primary       :   questrial, century gothic, helvetica neue, helvetica, arial, sans-serif;
+$font-secondary     :   quantico, lucida grande, verdana, sans-serif;
+$font-tertiary      :   prosto-one, sans-serif;
 $base-font-size     :   1rem;
 $base-line-height   :   1.3;
 
