--- a/css/main.css
+++ b/css/main.css
@@ -443,55 +443,55 @@ body {
 
 @media screen and (min-width: 768px) {
   .home {
-    background: url(../img/slide-3_1024.jpg) 50% 35% / cover no-repeat; } }
+    background: url(../img/locations-1024.jpg) 50% 35% / cover no-repeat; } }
 @media screen and (min-width: 992px) {
   .home {
-    background: url(../img/slide-2_1280.jpg) 50% 51% / cover no-repeat; } }
+    background: url(../img/standings-1280.jpg) 50% 51% / cover no-repeat; } }
 @media screen and (min-width: 1200px) {
   .home {
-    background: url(../img/slide-1_1536.jpg) 50% 45% / cover no-repeat; } }
+    background: url(../img/home-1536.jpg) 50% 45% / cover no-repeat; } }
 @media screen and (min-width: 1446px) {
   .home {
-    background: url(../img/slide-4_1816.jpg) 50% 22% / cover no-repeat; } }
+    background: url(../img/signup-1816.jpg) 50% 22% / cover no-repeat; } }
 
 @media screen and (min-width: 768px) {
   .standings {
-    background: url(../img/slide-4_1024.jpg) 50% 22% / cover no-repeat; } }
+    background: url(../img/signup-1024.jpg) 50% 22% / cover no-repeat; } }
 @media screen and (min-width: 992px) {
   .standings {
-    background: url(../img/slide-3_1280.jpg) 50% 35% / cover no-repeat; } }
+    background: url(../img/locations-1280.jpg) 50% 35% / cover no-repeat; } }
 @media screen and (min-width: 1200px) {
   .standings {
-    background: url(../img/slide-2_1536.jpg) 50% 51% / cover no-repeat; } }
+    background: url(../img/standings-1536.jpg) 50% 51% / cover no-repeat; } }
 @media screen and (min-width: 1446px) {
   .standings {
-    background: url(../img/slide-1_1816.jpg) 50% 45% / cover no-repeat; } }
+    background: url(../img/home-1816.jpg) 50% 45% / cover no-repeat; } }
 
 @media screen and (min-width: 768px) {
   .locations {
-    background: url(../img/slide-1_1024.jpg) 50% 45% / cover no-repeat; } }
+    background: url(../img/home-1024.jpg) 50% 45% / cover no-repeat; } }
 @media screen and (min-width: 992px) {
   .locations {
-    background: url(../img/slide-4_1280.jpg) 50% 22% / cover no-repeat; } }
+    background: url(../img/signup-1280.jpg) 50% 22% / cover no-repeat; } }
 @media screen and (min-width: 1200px) {
   .locations {
-    background: url(../img/slide-3_1536.jpg) 50% 35% / cover no-repeat; } }
+    background: url(../img/locations-1536.jpg) 50% 35% / cover no-repeat; } }
 @media screen and (min-width: 1446px) {
   .locations {
-    background: url(../img/slide-2_1816.jpg) 50% 51% / cover no-repeat; } }
+    background: url(../img/standings-1816.jpg) 50% 51% / cover no-repeat; } }
 
 @media screen and (min-width: 768px) {
   .signup {
-    background: url(../img/slide-2_1024.jpg) 50% 51% / cover no-repeat; } }
+    background: url(../img/standings-1024.jpg) 50% 51% / cover no-repeat; } }
 @media screen and (min-width: 992px) {
   .signup {
-    background: url(../img/slide-1_1280.jpg) 50% 45% / cover no-repeat; } }
+    background: url(../img/home-1280.jpg) 50% 45% / cover no-repeat; } }
 @media screen and (min-width: 1200px) {
   .signup {
-    background: url(../img/slide-4_1536.jpg) 50% 22% / cover no-repeat; } }
+    background: url(../img/signup-1536.jpg) 50% 22% / cover no-repeat; } }
 @media screen and (min-width: 1446px) {
   .signup {
-    background: url(../img/slide-3_1816.jpg) 50% 35% / cover no-repeat; } }
+    background: url(../img/locations-1816.jpg) 50% 35% / cover no-repeat; } }
 
 /********************************************
                 REST of STYLES
