--- a/scss/main.scss
+++ b/scss/main.scss
@@ -108,6 +108,15 @@ body {
                         BACKGROUND IMAGES
         ********************************************/
 
+/*Home image downloaded from http://picjumbo.com/wp-content/uploads/IMG_4896-1300x866.jpg and downsized in Adobe Lightroom 5
+
+Standings image downloaded from http://picjumbo.com (direct link has been later removed from picjumbo) and downsized in Adobe Lightroom 5
+
+Locations image downloaded from http://picjumbo.com/wp-content/uploads/IMG_48931-1300x866.jpg and downsized in Adobe Lightroom 5
+
+Signup image downloaded from http://picjumbo.com/wp-content/uploads/IMG_4795-1300x866.jpg and downsized in Adobe Lightroom 5*/
+
+
 @include pages {
     @include opacity(0.8);
 }
