--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -13,7 +13,7 @@ $base-line-height   :   1.3;
 $color-white    :   #fff;
 $color-gray-a   :   #999;
 $color-gray-b   :   #777;
-$color-normal   :   rgb(172, 173, 171);
+$color-normal   :   #acadab;
 $color-light    :   rgba(172, 173, 171, 0.7);
 $color-lighter  :   rgba(172, 173, 171, 0.5);
 
