--- a/css/main.css
+++ b/css/main.css
@@ -393,9 +393,13 @@ h4, h5, h6 {
   color: #777;
   float: left;
   height: 50px;
-  padding: 13px;
+  padding: 15px 11px;
   font-size: 18px;
-  line-height: 10px; }
+  line-height: 20px; }
+  @media screen and (max-width: 319px) {
+    .navbar-league {
+      padding: 0px 12px;
+      transform: translateY(-35px); } }
 
 .navbar-toggle {
   margin-top: 8px;
