--- a/scss/main.scss
+++ b/scss/main.scss
@@ -55,9 +55,10 @@ footer p {
     color: #777;
     float: left;
     height: 50px;
-    padding: 13px;
+    padding: 15px 11px;
     font-size: 18px;
-    line-height: 10px; 
+    line-height: 20px;
+    @media #{$cstm-max} { padding: 0px 12px; transform: translateY(-35px); } 
 }
 
 .navbar-toggle {
